[FEAT] 힌트 테이블 구조 변경